; ModuleID = '/home/carl/AnghaBench/git/t/helper/extr_test-json-writer.c_make_inline2.c'
source_filename = "/home/carl/AnghaBench/git/t/helper/extr_test-json-writer.c_make_inline2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inline2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"a\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"abc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @make_inline2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @make_inline2(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @jw_array_begin(i32* @inline2, i32 %3)
  %5 = call i32 @jw_array_inline_begin_array(i32* @inline2)
  %6 = call i32 @jw_array_intmax(i32* @inline2, i32 1)
  %7 = call i32 @jw_array_intmax(i32* @inline2, i32 2)
  %8 = call i32 @jw_end(i32* @inline2)
  %9 = call i32 @jw_array_inline_begin_array(i32* @inline2)
  %10 = call i32 @jw_array_intmax(i32* @inline2, i32 3)
  %11 = call i32 @jw_array_intmax(i32* @inline2, i32 4)
  %12 = call i32 @jw_end(i32* @inline2)
  %13 = call i32 @jw_array_inline_begin_object(i32* @inline2)
  %14 = call i32 @jw_object_string(i32* @inline2, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %15 = call i32 @jw_end(i32* @inline2)
  %16 = call i32 @jw_end(i32* @inline2)
  ret void
}

declare dso_local i32 @jw_array_begin(i32*, i32) #1

declare dso_local i32 @jw_array_inline_begin_array(i32*) #1

declare dso_local i32 @jw_array_intmax(i32*, i32) #1

declare dso_local i32 @jw_end(i32*) #1

declare dso_local i32 @jw_array_inline_begin_object(i32*) #1

declare dso_local i32 @jw_object_string(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
